Add scramble image

--- a/QuantumScrambleImage/QuantumScrambleImage/Views/Images/Index.cshtml
+++ b/QuantumScrambleImage/QuantumScrambleImage/Views/Images/Index.cshtml
@@ -53,7 +53,7 @@
                                     {
                                         <a asp-action="Scrambleimage" asp-route-id="@item.Id" class="btn btn-info">Decrypted<i class="glyphicon glyphicon-align-justify"></i></a>
                                     }
-                                    <a asp-action="ConverttoRGB" asp-route-id="@item.Id" class="btn btn-info">metrics<i class="glyphicon glyphicon-align-justify"></i></a>|
+                                    <a asp-action="Measurement" asp-route-id="@item.Id" class="btn btn-info">metrics<i class="glyphicon glyphicon-align-justify"></i></a>|
 
                                     <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog">Delete</button>
                                 </td>
