--- a/QuantumScrambleImage/QuantumScrambleImage/Views/Images/Measurement.cshtml
+++ b/QuantumScrambleImage/QuantumScrambleImage/Views/Images/Measurement.cshtml
@@ -27,7 +27,7 @@
                                 <p class="card-text">
                                 Entropy: @Model.OriginalEntropy
                                 </p>
-                                <a href="#!" class="btn btn-primary">Button</a>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".originalhistgrame">Histgrame</button>
                             </div>
                         </div>
                     </div>
@@ -42,7 +42,7 @@
                                 <p class="card-text">
                                   Entropy: @Model.ScrambleEntropy
                                 </p>
-                                <a href="#!" class="btn btn-primary">Button</a>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Histgrame</button>
                             </div>
                         </div>
                     </div>
@@ -56,3 +56,88 @@
     <!-- Inner -->
 </div>
 <!-- Carousel wrapper -->
+<!-- Large modal -->
+
+
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div style="width: 80%;">
+                <canvas id="histogramChart"></canvas>
+            </div>
+
+        </div>
+    </div>
+</div>
+<div class="modal fade originalhistgrame" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div style="width: 80%;">
+                <canvas id="histogramChart1"></canvas>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+@section scripts {
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+        var histogramData = @Html.Raw(Json.Serialize(Model.Scramblehistogram));
+
+        var ctx = document.getElementById('histogramChart').getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: Array.from({ length: histogramData.length }, (_, i) => i.toString()),
+                datasets: [{
+                    label: 'Intensity Level',
+                    data: histogramData,
+                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                    borderColor: 'rgba(75, 192, 192, 1)',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    x: {
+                        type: 'linear',
+                        position: 'bottom'
+                    },
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
+    </script>
+    <script>
+        var histogramData = @Html.Raw(Json.Serialize(Model.originalhistogram));
+
+        var ctx = document.getElementById('histogramChart1').getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: Array.from({ length: histogramData.length }, (_, i) => i.toString()),
+                datasets: [{
+                    label: 'Intensity Level',
+                    data: histogramData,
+                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                    borderColor: 'rgba(75, 192, 192, 1)',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    x: {
+                        type: 'linear',
+                        position: 'bottom'
+                    },
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
+    </script>
+}
